# wispo-roboto

./: .env.example  README.md  cloudbuild.yaml  getting_started.md  pyproject.toml
app/: commands.py  forecast.py  joke.py  layers.py  main.py  mother_of_all_file.py  mountainview.py  restaurant.py  shotcaller.py  welcome.py
scripts/: test_shotcaller.py
